@@ -1,0 +1,256 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-POP\u5927\u7206\u70b8\uff01RIIZE\u627f\u6f22\u56de\u6b78\u3001\u9632\u5f48\u5c11\u5e74\u5718\u91d1\u78a9\u73cd\u65b0\u55ae\u66f2\u3001aespa\u767b\u9802iTunes\u699c\u55ae\u3001SEVENTEEN\u6210\u54e1\u737b\u5531BBC\u7d00\u9304\u7247", "description": "K-POP\u5927\u7206\u70b8\uff01RIIZE\u627f\u6f22\u56de\u6b78\u3001\u9632\u5f48\u5c11\u5e74\u5718\u91d1\u78a9\u73cd\u65b0\u55ae\u66f2\u3001aespa\u767b\u9802iTunes\u699c\u55ae\u3001SEVENTEEN\u6210\u54e1\u737b\u5531BBC\u7d00\u9304\u7247", "url": "https://www.famechos.me/news/K-POP\u5927\u7206\u70b8\uff01RIIZE\u627f\u6f22\u56de\u6b78\u3001\u9632\u5f48\u5c11\u5e74\u5718\u91d1\u78a9\u73cd\u65b0\u55ae\u66f2\u3001aespa\u767b\u9802iTunes\u699c\u55ae\u3001SEVENTEEN\u6210\u54e1\u737b\u5531BBC\u7d00\u9304\u7247.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-11T17:32:50.975002+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-POP大爆炸！RIIZE承漢回歸、防彈少年團金碩珍新單曲、aespa登頂iTunes榜單、SEVENTEEN成員獻唱BBC紀錄片.html"/>
+<meta name="description" content="韓流席捲全球！RIIZE承漢回歸、防彈少年團金碩珍新單曲、aespa登頂iTunes榜單、SEVENTEEN成員獻唱BBC紀錄片，帶你掌握K-POP最新動態！" />
+<meta name="keywords" content="K-POP, RIIZE, 承漢, 防彈少年團, 金碩珍, aespa, iTunes, SEVENTEEN, BBC紀錄片" />
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-POP大爆炸！RIIZE承漢回歸、防彈少年團金碩珍新單曲、aespa登頂iTunes榜單、SEVENTEEN成員獻唱BBC紀錄片.html" />
+        <meta property="og:title" content="K-POP大爆炸！RIIZE承漢回歸、防彈少年團金碩珍新單曲、aespa登頂iTunes榜單、SEVENTEEN成員獻唱BBC紀錄片" />
+        <meta property="og:description" content="K-POP大爆炸！RIIZE承漢回歸、防彈少年團金碩珍新單曲、aespa登頂iTunes榜單、SEVENTEEN成員獻唱BBC紀錄片" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-POP大爆炸！RIIZE承漢回歸、防彈少年團金碩珍新單曲、aespa登頂iTunes榜單、SEVENTEEN成員獻唱BBC紀錄片" />
+        <meta property="twitter:description" content="K-POP大爆炸！RIIZE承漢回歸、防彈少年團金碩珍新單曲、aespa登頂iTunes榜單、SEVENTEEN成員獻唱BBC紀錄片" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-POP大爆炸！RIIZE承漢回歸、防彈少年團金碩珍新單曲、aespa登頂iTunes榜單、SEVENTEEN成員獻唱BBC紀錄片</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">11/10/2024</p>
+        </div>
+	<p>SM娛樂宣布RIIZE成員承漢將於下月回歸，樂團將重新組成七人團體。該公司發表了一份聲明，解釋樂團最初計劃為七人團體，以及承漢對過去一年多的爭議事件深感後悔。</p>
+<p>承漢於一年前因爭議事件而暫停活動。在宣布回歸後，他上傳了一封手寫信，再次向粉絲和團員道歉，並感謝團員給他第二次機會，承諾會成為團隊中不可或缺的一員。</p>
+<p>樂團於上周在首爾開設了一家快閃店，以紀念出道一周年和發行新EP《Riizing: Epilogue》。</p>
+<h2>金碩珍完整版單曲《超級金槍魚》正式發布</h2>
+<p>防彈少年團成員金碩珍發布了他的個人單曲《超級金槍魚》的完整版。他在六月的團隊年度音樂節上首次表演了這首歌，並於前一天通過全球粉絲生活平台Weverse告知粉絲將發布完整版。</p>
+<p>《超級金槍魚》最初於2021年金碩珍生日時以特別影片形式發布，隔年以單曲形式發布，但只有單一版本。該影片在YouTube上的觀看次數已超過1億次，並在iTunes Top Songs Chart中排名第一，在57個地區排名第一，在Billboard的World Digital Song Sales Chart中排名第一。</p>
+<h2>iTunes榜單新霸主：aespa以特別單曲奪冠</h2>
+<p>aespa的特別數位單曲《SYNK : 平行線》在16個地區的iTunes Top Albums Chart中排名第一。該單曲包含四首歌曲，每位成員各有一首個人歌曲。成員Karina的歌曲《Up》登上了Melon音樂榜的Top 100和Hot 100榜單。</p>
+<p><p>aespa將於10月21日發行第五張EP《Whiplash》，距離他們的第一張錄音室專輯《末日決戰》發行已經五個月。後者在Billboard 200榜單中排名第25位，並成為他們第五次登上主要專輯榜單。該專輯在25個地區的iTunes Top Albums Chart中排名第一。</p> aespa 將於明年一月底開始在美洲和歐洲巡演，並於三月十二日在西班牙馬德里結束巡演。</p>
+<h2>BBC紀錄片特邀SEVENTEEN成員Dogyeom、勝寛獻唱</h2>
+<p>SEVENTEEN成員Dogyeom和勝寛最近為BBC紀錄片系列《亞洲》演唱主題曲。這部七集紀錄片的預告片中，二人用韓語唱著，邀請聽眾一起呼吸，與英國廣播員和生物學家大衛·愛登堡爵士的旁白交織在一起。</p>
+<p>Dogyoom和勝寛表示，他們非常榮幸能夠參與這部揭示亞洲壯麗自然美景和奇觀的紀錄片。他們的歌聲為紀錄片增添了新的層次和情感。</p>
+<p>Bleeding Fingers Music的CEO和總裁羅素·伊曼紐表示，與SEVENTEEN合作是完美的選擇，無論是在真實性還是創造性方面。他們抓住了這個機會，帶來了如此多的激情和能量，使這次合作真正令人難忘。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_XOKzzAWgfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html">KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
